--- a/src/components/Accordion/accordion.css
+++ b/src/components/Accordion/accordion.css
@@ -85,15 +85,13 @@
     cursor: pointer;
     background-color: rgb(225, 250, 250);
     padding: 10px;
-    transition: 0.3s;
 }
 .show-hide-qa:hover{
     background-color: white;
     color: black;
     border: 2px solid black;    
-    transition: 0.3s;
+    transition: 0.3s ease-in;
 }
-
 
 .paginationBttns{
     width: 80%;
